--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head> </head>
-    
-    <body>
+    <head> 
+    <meta charset="UTF-8">
+    <title>Exceptional Realty</title>
+    </head>
 
-            <div class ="navPanel">
+    <body>
+        <h1>Exceptional</h1>
+        <h2>Realty Group</h2>
+
+        
+        <h3>Contact</h3>
+        <!-- Adding a map -->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1650.041147123315!2d-87.65311300375502!3d41.92555068551401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd31b53883967%3A0x95dd53ec4c735cab!2sFullerton!5e0!3m2!1sen!2sus!4v1557073396364!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+        <!-- Adding a contact form -->
+
+
+        <div class ="navPanel">
             <h3> Navigation Panel </h3>
             <a href="index.html" alt="Index Page">Index</a>
             <a href="listings.html" alt="Listings Page">Listings</a>
