--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <!-- More learning stuff, for those who do not like needless comments, I do apologize ahead of time -->
     <head> 
     <meta charset="UTF-8">
     <title>Exceptional Realty</title>
@@ -15,7 +16,21 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1650.041147123315!2d-87.65311300375502!3d41.92555068551401!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd31b53883967%3A0x95dd53ec4c735cab!2sFullerton!5e0!3m2!1sen!2sus!4v1557073396364!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
         <!-- Adding a contact form -->
+        <form action="#" method="post">    <!-- -->
+            <label for="fullname">Name</label>   <!-- A label for the input "fullname"-->
+            <input type="text" id = "fullname" name="fullname" placeholder="Your Name" required>
+            
+            <label for="email">Email</label>
+            <input type="email" name="email" id="email" placeholder="Your Email" required> <!-- HTML5 gives email validadition -->
 
+            <label for="phone">Tel</label>
+            <input type="tel" name="phone" id="phone" placeholder="Phone #(optional)"> <!-- Tel will make lives easier for mobile users -->
+
+            <label for="message">Messsage</label>
+            <textarea id="message" name="message" rows="10" placeholder="Message..."></textarea>
+
+            <input type="submit" value="Send">
+        </form>
 
         <div class ="navPanel">
             <h3> Navigation Panel </h3>
