Added video for tutorial purposes

--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,13 @@
             <input type="submit" value="Send">
         </form>
 
+        <h3> Adding a video for educational purposes </h3> <!--please do not sue me, I make mo money from this -->
+        <video controls>
+            <source src="videos/tutvid.mp4" type="video/mp4">
+            <source src="videos/tutvid.ogv" type="video/mp4">
+            Your browser doesn't support HTML5 video, <a href="http://browserhappy.com/" tar="_blank">please upgrade your browser</a>
+        </video>
+
         <div class ="navPanel">
             <h3> Navigation Panel </h3>
             <a href="index.html" alt="Index Page">Index</a>
